docs : typography added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <hr>
     <h2>@typography</h2>
     <small>this is relatively small text.</small>
+    <p>This section will have a <strong>Bold</strong> item.</p>
 <hr>
 <!-- <br> -->
     <h2>@container</h2>
