docs : styling links

--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
 <!-- <br> -->
     <h2>@container</h2>
     <h3>Fluid container</h3>
-    <p>thhis is a fluid container and will got till the end of the page.</p>
+    <div class="fluid-container">this is a fluid container and will got till the end of the page.</div>
+
     <h3>center container </h3>
-    <div>this is a centered container and it'll got till the specified width.</div>
+    <div class="center-container">this is a centered container and it'll got till the specified width.</div>
 <hr>
     <h2>@links</h2>
-    <a href="https://instagram.com"> instagram</a>
-    <a href="/">Primary links</a>
-    <a href="/">Secondary Links</a>
+    <a href="https://instagram.com" class="links"> instagram</a>
+    <a href="/" class="links primary-links">Primary links</a>
+    <a href="/" class="links secondary-links">Secondary Links</a>
 
+<br>
+<hr>
 
     <div>@Here's lists</div>
     <h3>unordered list</h3>
