--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
 
     <div>@Here's lists</div>
     <h3>unordered list</h3>
-    <ul>
+    <ul class="list-non-bullet">
         <li>itme 1</li>
         <li>itme 2</li>
         <li>itme 3</li>
         <li>itme 4</li>
     </ul>
     <h3>unordered inline list</h3>
-    <ul>
-        <li>itme inline 1</li>
-        <li>itme inline 2</li>
-        <li>itme inline 3</li>
-        <li>itme inline 4</li>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline">itme inline 1</li>
+        <li class="list-item-inline">itme inline 2</li>
+        <li class="list-item-inline">itme inline 3</li>
+        <li class="list-item-inline">itme inline 4</li>
     </ul>
     <h3> Reversed Ordered list</h3>
-    <ol>
+    <ol reversed>
         <li>milk</li>
         <li>Bread</li>
         <li>eggs</li>
