--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
 
     <hr>
     <h3>@nav</h3>
-    <nav>
-        <div>
+    <nav class="navigation container">
+        <div class="nav-brand">
             iAmBrand
         </div>
-        <ul>
-            <li>
-                <a href="/">Home</a>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a href="/" class="links link-active">Home</a>
             </li>
-            <li>
-                <a href="/">Projects</a>
+            <li class="list-item-inline">
+                <a href="/" class="links">Projects</a>
             </li>
-            <li>
-                <a href="/">About</a>
+            <li class="list-item-inline">
+                <a href="/" class="links">About</a>
             </li>
         </ul>
     </nav>
