Docs : portfolio updation

--- a/index.html
+++ b/index.html
@@ -3,9 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <link href="/CSS/style.css" rel="stylesheet">
+    <title>Home | Arnav's Portfolio</title>
 </head>
 <body>
-    
+    <!-- NAVIGATION BEGINS -->
+    <nav class="navigation container">
+        <div class="nav-brand">
+            iAmBrand
+        </div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a href="/index.html" class="links link-active">Home</a>
+            </li>
+            <li class="list-item-inline">
+                <a href="/" class="links">Projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a href="/" class="links">Blogs</a>
+            </li>
+        </ul>
+    </nav>
+
+
+    <!-- HEADER -->
+    <header class="hero">
+        <img src="images/homePortfolio.svg" class="hero-image">
+        <h1 class="hero-heading">ARNAV RAJ -<span class="heading-inverted">-The Developer</span></h1>
+    </header>
+
+
+    <!-- SECTIONS -->
+    <section class="section Off-white">
+        <div class="center-container">
+            <h3>TECHNOLOGIES</h3>
+            <p>
+                I'm familiar with HTML5, CSS3, Git, JavaScript, TypeScript, NodeJS, ReactJS, C and Web Hosting
+            </p>
+        </div>
+    </section>
+
+    <section class="section light-dark">
+        <div class="center-container">
+            <h3>PROJECTS</h3>
+            <p>
+                I like to showcase my work and thus, you can see my projects hosted online.
+            </p>
+            <a class="links primary-links" href="/">See Projects</a>
+        </div>
+    </section>
+
+
 </body>
 </html>
