--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="text/css" href="images/logo4.png">
     <link href="/CSS/style.css" rel="stylesheet">
     <title>Home | Arnav's Portfolio</title>
 </head>
@@ -10,17 +11,17 @@
     <!-- NAVIGATION BEGINS -->
     <nav class="navigation container">
         <div class="nav-brand">
-            iAmBrand
+            <img class="image-head" src="images/mypic2.jpg" alt="My picture." width="100px" height="100px">
         </div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a href="/index.html" class="links link-active">Home</a>
             </li>
             <li class="list-item-inline">
-                <a href="/" class="links">Projects</a>
+                <a href="/project.html" class="links">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a href="/" class="links">Blogs</a>
+                <a href="/blog.html" class="links">Blogs</a>
             </li>
         </ul>
     </nav>
@@ -53,6 +54,34 @@
         </div>
     </section>
 
+    <section class="section Off-white">
+        <div class="center-container">
+            <h3>BLOGS</h3>
+            <p>
+                I am also working on some technical and non technical blogs. I like to document my journey of learning.
+            </p>
+            <a class="links tp primary-links" href="/">Read Blogs</a>
+        </div>
+    </section>
 
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="footer-head">I'd love to hear from you.</div>
+        <ul class="social-links">
+            <li class="list-item-inline ">
+                <a href="https://github.com/ArnavRaaj" class="secondary-links links">GitHub</a>
+            </li>
+            <li class="list-item-inline ">
+                <a href="https://www.facebook.com/arnav.raj.796774/" class="secondary-links links">facebook</a>
+            </li>
+            <li class="list-item-inline ">
+                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links">Linkedin</a>
+            </li>
+            <li class="list-item-inline ">
+                <a href="https://www.instagram.com/arnav.raaze/" class="secondary-links links">Instagram</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
