--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
         <div class="footer-head">I'd love to hear from you.</div>
         <ul class="social-links">
             <li class="list-item-inline ">
-                <a href="https://github.com/ArnavRaaj" class="secondary-links links">GitHub</a>
+                <a href="https://github.com/ArnavRaaj" class="secondary-links links" target="_blank">GitHub</a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.facebook.com/arnav.raj.796774/" class="secondary-links links">facebook</a>
+                <a href="https://www.facebook.com/arnav.raj.796774/" class="secondary-links links" target="_blank">facebook</a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links">Linkedin</a>
+                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links" target="_blank">Linkedin</a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.instagram.com/arnav.raaze/" class="secondary-links links">Instagram</a>
+                <a href="https://www.instagram.com/arnav.raaze/" class="secondary-links links" target="_blank">Instagram</a>
             </li>
         </ul>
     </footer>
