projects-blog update

--- a/index.html
+++ b/index.html
@@ -73,14 +73,17 @@
                 <a href="https://github.com/ArnavRaaj" class="secondary-links links" target="_blank">GitHub</a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.facebook.com/arnav.raj.796774/" class="secondary-links links" target="_blank">facebook</a>
-            </li>
-            <li class="list-item-inline ">
                 <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links" target="_blank">Linkedin</a>
             </li>
             <li class="list-item-inline ">
                 <a href="https://www.instagram.com/arnav.raaze/" class="secondary-links links" target="_blank">Instagram</a>
             </li>
+            <li class="list-item-inline ">
+                <a href="https://www.facebook.com/arnav.raj.796774/" class="secondary-links links" target="_blank">facebook</a>
+            </li>
+            <li class="list-item-inline ">
+                <a href="https://twitter.com/ArnavRa74778792" class="secondary-links links" target="_blank">Twitter</a>
+            </li>            
         </ul>
     </footer>
 </body>
