--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
 
     <!-- HEADER -->
     <header class="hero">
-        <img src="images/homePortfolio.svg" class="hero-image">
+        <img src="images/blog-head.svg" class="hero-image">
         <h1 class="hero-heading">ARNAV RAJ -<span class="heading-inverted">-The Developer</span></h1>
     </header>
 
@@ -50,7 +50,7 @@
                 <a href="https://github.com/ArnavRaaj" class="secondary-links links" target="_blank">GitHub</a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links" target="_blank">Linkedin</a>
+                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links" target="_blank">LinkedIn</a>
             </li>
             <li class="list-item-inline ">
                 <a href="https://www.instagram.com/arnav.raaze/" class="secondary-links links" target="_blank">Instagram</a>
