--- a/project.html
+++ b/project.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <!-- NAVIGATION BEGINS -->
     <nav class="navigation container">
         <div class="nav-brand">
@@ -30,17 +31,45 @@
 
     <!-- HEADER -->
     <header class="hero">
-        <img src="images/homePortfolio.svg" class="hero-image">
+        <img src="images/project-header.svg" class="hero-image">
         <h1 class="hero-heading">ARNAV RAJ -<span class="heading-inverted">-The Developer</span></h1>
     </header>
 
 
+    <!-- PROJECTS -->
 
+<!-- project-2 -->
+    <section class="section Off-white">
+        <div class="center-container"> 
+            <h2>DARK SERIES QUIZ</h2>
+            <p>
+                A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and play a quiz to see how well know <strong>DARK.</strong>
+            </p>
+            <a class="links primary-links" href="https://repl.it/@ArnavRaj1/Dark-Series?embed=1&output=1#index.js   ">
+                Play Quiz
+            </a>
+            <a class="links secondary-links" href="https://github.com/ArnavRaaj/Dark-Series/blob/master/index.js">
+                View Source Code
+            </a>
+        </div>
+    </section>
 
-
-
-
-
+<!-- project-1 -->
+    <section class="section light-dark ">
+        <div class="center-container">
+            <h2>HOW WELL DO YOU KNOW ME?</h2>
+            <p>
+                A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and see how they know you.
+            </p>
+            <a class="links primary-links" href="https://repl.it/@ArnavRaj1/endgame?embed=1&output=1#index.js">
+                Live Project
+            </a>
+            <a class="links secondary-links" href="https://github.com/ArnavRaaj/endgame/blob/master/index.js">
+                View Source Code
+            </a>
+        </div>
+    </section>
+    
 
     <!-- FOOTER -->
     <footer class="footer">
@@ -50,7 +79,7 @@
                 <a href="https://github.com/ArnavRaaj" class="secondary-links links" target="_blank">GitHub</a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links" target="_blank">Linkedin</a>
+                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links" target="_blank">LinkedIn</a>
             </li>
             <li class="list-item-inline ">
                 <a href="https://www.instagram.com/arnav.raaze/" class="secondary-links links" target="_blank">Instagram</a>
