--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p>
                 I like to showcase my work and thus, you can see my projects hosted online.
             </p>
-            <a class="links primary-links" href="/">See Projects</a>
+            <a class="links primary-links" href="/project.html">See Projects</a>
         </div>
     </section>
 
@@ -60,7 +60,7 @@
             <p>
                 I am also working on some technical and non technical blogs. I like to document my journey of learning.
             </p>
-            <a class="links tp primary-links" href="/">Read Blogs</a>
+            <a class="links tp primary-links" href="/blog.html">Read Blogs</a>
         </div>
     </section>
 
@@ -73,7 +73,7 @@
                 <a href="https://github.com/ArnavRaaj" class="secondary-links links" target="_blank">GitHub</a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links" target="_blank">Linkedin</a>
+                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links" target="_blank">LinkedIn</a>
             </li>
             <li class="list-item-inline ">
                 <a href="https://www.instagram.com/arnav.raaze/" class="secondary-links links" target="_blank">Instagram</a>
