--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
     <!-- HEADER -->
     <header class="hero">
         <img src="images/blog-head.svg" class="hero-image">
-        <h1 class="hero-heading">ARNAV RAJ -<span class="heading-inverted">-The Developer</span></h1>
+        <h1 class="hero-heading">All Blogs -<span class="heading-inverted">Technical / Non-Technical</span></h1>
     </header>
 
 
