--- a/project.html
+++ b/project.html
@@ -32,7 +32,7 @@
     <!-- HEADER -->
     <header class="hero">
         <img src="images/project-header.svg" class="hero-image">
-        <h1 class="hero-heading">ARNAV RAJ -<span class="heading-inverted">-The Developer</span></h1>
+        <h1 class="hero-heading">PROJECTS <span class="heading-inverted">by me</span></h1>
     </header>
 
 
@@ -42,13 +42,14 @@
     <section class="section Off-white">
         <div class="center-container"> 
             <h2>DARK SERIES QUIZ</h2>
+            <small>November, 2k20</small>
             <p>
                 A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and play a quiz to see how well know <strong>DARK.</strong>
             </p>
-            <a class="links primary-links" href="https://repl.it/@ArnavRaj1/Dark-Series?embed=1&output=1#index.js   ">
+            <a class="links primary-links" href="https://repl.it/@ArnavRaj1/Dark-Series?embed=1&output=1#index.js" target="_blank">
                 Play Quiz
             </a>
-            <a class="links secondary-links" href="https://github.com/ArnavRaaj/Dark-Series/blob/master/index.js">
+            <a class="links secondary-links" href="https://github.com/ArnavRaaj/Dark-Series/blob/master/index.js" target="_blank">
                 View Source Code
             </a>
         </div>
@@ -58,13 +59,14 @@
     <section class="section light-dark ">
         <div class="center-container">
             <h2>HOW WELL DO YOU KNOW ME?</h2>
+            <small>November, 2k20</small>
             <p>
                 A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and see how they know you.
             </p>
-            <a class="links primary-links" href="https://repl.it/@ArnavRaj1/endgame?embed=1&output=1#index.js">
+            <a class="links primary-links" href="https://repl.it/@ArnavRaj1/endgame?embed=1&output=1#index.js" target="_blank">
                 Live Project
             </a>
-            <a class="links secondary-links" href="https://github.com/ArnavRaaj/endgame/blob/master/index.js">
+            <a class="links secondary-links" href="https://github.com/ArnavRaaj/endgame/blob/master/index.js" target="_blank">
                 View Source Code
             </a>
         </div>
