--- a/blogContent1.html
+++ b/blogContent1.html
@@ -28,52 +28,21 @@
         </ul>
     </nav>
 
-    <!-- HEADER -->
-    <header class="hero">
-        <img src="images/blog-head.svg" class="hero-image">
-        <h1 class="hero-heading">All Blogs -<span class="heading-inverted">Technical / Non-Technical</span></h1>
-    </header>
-
-
-<!-- blog-2 -->
-    <section class="section Off-white">
-        <div class="center-container"> 
-            <h2>DARK SERIES QUIZ</h2>
-            <small>November, 2k20</small>
-            <p>
-                A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and play a quiz to see how well know <strong>DARK.</strong>
-            </p>
-            <a class="links primary-links" href="https://repl.it/@ArnavRaj1/Dark-Series?embed=1&output=1#index.js" target="_blank">
-                Play Quiz
-            </a>
-            <a class="links secondary-links" href="https://github.com/ArnavRaaj/Dark-Series/blob/master/index.js" target="_blank">
-                View Source Code
-            </a>
-        </div>
-    </section>
-
-<!-- blog-1 -->
+    <!-- blog-1 -->
     <section class="section light-dark ">
         <div class="center-container">
             <h2>What is Trekking?</h2>
             <small>November, 2k20</small>
             <p>
-                “Everyone wants to live on top of the mountain, but all the happiness and growth occurs while you are climbing it.”<small> -Andy Rooney</small>
+                “Everyone wants to live on top of the mountain, but all the happiness and growth occurs while you are
+                climbing it.”<small> -Andy Rooney</small>
             </p>
             <p>
-                Life is a trek & despite of your willingness, you have to keep moving forward in life to conquer your destiny....
+                Life is a trek & despite of your willingness, you have to keep moving forward in life to conquer your
+                destiny....
             </p>
-            <a class="links primary-links" href="/blogContent1.html">
-                Read full blog
-            </a>
         </div>
     </section>
-
-
-
-
-
-
 
     <!-- FOOTER -->
     <footer class="footer">
@@ -83,17 +52,20 @@
                 <a href="https://github.com/ArnavRaaj" class="secondary-links links" target="_blank">GitHub</a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links"
+                    target="_blank">LinkedIn</a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.instagram.com/arnav.raaze/" class="secondary-links links" target="_blank">Instagram</a>
+                <a href="https://www.instagram.com/arnav.raaze/" class="secondary-links links"
+                    target="_blank">Instagram</a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.facebook.com/arnav.raj.796774/" class="secondary-links links" target="_blank">facebook</a>
+                <a href="https://www.facebook.com/arnav.raj.796774/" class="secondary-links links"
+                    target="_blank">facebook</a>
             </li>
             <li class="list-item-inline ">
                 <a href="https://twitter.com/ArnavRa74778792" class="secondary-links links" target="_blank">Twitter</a>
-            </li>            
+            </li>
         </ul>
     </footer>
 </body>
