--- a/blogContent1.html
+++ b/blogContent1.html
@@ -31,7 +31,7 @@
     <!-- blog-1 -->
     <section class="section light-dark ">
         <div class="center-container">
-            <h2>What is Trekking?</h2>
+            <h2 class="underline">What is Trekking?</h2>
             <small>November, 2k20</small>
             <p>
                 “Everyone wants to live on top of the mountain, but all the happiness and growth occurs while you are
@@ -39,8 +39,25 @@
             </p>
             <p>
                 Life is a trek & despite of your willingness, you have to keep moving forward in life to conquer your
-                destiny....
+                destiny.
             </p>
+            <img src="images/blog1content-header.jpg" alt="Dabb on Juda ka Talab" width="500px" height="400px">
+            <p>
+                Trekking is an <strong> outdoor activity</strong> of walking for more than a day. It is a form of
+                walking, undertaken with the specific purpose of exploring and enjoying the scenery. Trekking could be a
+                motive, It could be a commitment, an aim, an objective, a mission, a party, a social gathering. It could
+                be a place where you find friends, and it could be a journey. It could be a slightest chance to save our
+                future generation from losing the nature lovers, mother earth holding within. It can be shortened or
+                extended as per the desire of trekkers.
+            </p>
+            <p>
+                Trekking is more challenging than hiking since it tests one's ability, endurance and their mental as
+                well as psychological capacity. There are many different ways to do a trek and trekking culture often
+                varies from country to country. It usually takes place on trails in areas of relatively unspoiled
+                wilderness.
+            </p>
+            <h2 class="underline">What is Trekking?</h2>
+
         </div>
     </section>
 
