--- a/blogContent1.html
+++ b/blogContent1.html
@@ -56,7 +56,107 @@
                 varies from country to country. It usually takes place on trails in areas of relatively unspoiled
                 wilderness.
             </p>
-            <h2 class="underline">What is Trekking?</h2>
+            <h2 class="underline">Type of trekking:</h2>
+            <p>
+                Treks can be categorized in many terms according to seasons, altitude, difficulties, etcetera.
+                <p>
+                    According to seasons, treks can be categorized as <a
+                        href="https://www.bikatadventures.com/Home/Blog/best-himalayan-treks-in-summer"
+                        class="inline-links">Summer Trek</a>, <a
+                        href="https://indiahikes.com/autumn-himalayan-treks-september-october-november/#gref"
+                        class="inline-links">Autumn Trek</a>, <a
+                        href="https://www.bikatadventures.com/Home/Blog/top-winter-treks" class="inline-links">Winter
+                        Trek</a>.
+                </p>
+
+                <p>
+                    According to altitude & difficulties, it can be categorized as <a
+                        href="https://www.outlookindia.com/outlooktraveller/explore/story/66678/5-easy-treks-india"
+                        class="inline-links">Beginner level Treks</a>, <a
+                        href="https://www.thrillophilia.com/moderate-himalayan-treks#:~:text=Some%20of%20the%20greatest%20options,craving%20for%20an%20adrenaline%20rush."
+                        class="inline-links">Moderate level Treks</a>, <a
+                        href="https://www.bikatadventures.com/Home/Blog/7-most-difficult-treks-to-do-in-india"
+                        class="inline-links">Difficult level Treks</a> & <a
+                        href="https://www.nationalgeographic.com/travel/top-10/climbs/" class="inline-links">Extreme
+                        difficult level Treks</a>.
+                </p>
+
+            </p>
+            <h2 class="underline">Importance of Trekking</h2>
+            <p>
+                Trekking can be viewed from two different points: as an intense exercise, or an amazing and unique
+                learning experience. Personally, I would love to learn whatever, I can during my trek. In trekking, we
+                have to face different difficulties and uncertainties, by overcome them we allow ourselves to enhance
+                our knowledge, experience and the understanding of the world.
+            </p>
+            <p>
+                By involving in trekking, you can realize that how beautiful is nature and you will be grateful to live
+                in a place like earth. You can see things differently. Some of the major importance of trekking are as
+                follows:
+                <ul>
+                    <li>
+                        Overall improve fitness
+                    </li>
+                    <li>
+                        Reduce stress
+                    </li>
+                    <li>
+                        Social benefits
+                    </li>
+                    <li>
+                        Skill development / Team Work
+                    </li>
+                    <li>
+                        Cultural understanding
+                    </li>
+                    <li>
+                        Wildlife encounters
+                    </li>
+                    <li>
+                        Thrill and adrenaline
+                    </li>
+                    <li>
+                        Understanding of nature
+                    </li>
+                    <li>
+                        Develops your interacting skills
+                    </li>
+                    <li>
+                        Satisfaction for your mind, body and soul
+                    </li>
+                    <li>
+                        You meet a new and better version of yourself.
+                    </li>
+                </ul>
+            </p>
+            <h2 class="underline">Risks and preventions of the trek:</h2>
+            <p>
+                Although, trekking is exciting and thrilling it comes with great risk depending on your choice of the
+                trek. The risk can be minimized or avoided if you follow the instruction you are provided with. Some of
+                the dangers which you may encounter during the treks are:-
+                <p>
+                    Unexpected <strong>weather change, wildlife, bad footing, sunburn, not getting rescued</strong>, <a
+                        href="" class="inline-links"> altitude sickness</a>,<a href="" class="inline-links">
+                        dehydration</a>. To avoid these risk you should be prepared for the worst. Bring gear and
+                    clothes to survive in bad weathers. Don't try to attract wildlife during your trek. They may be
+                    charming but they can bring you some unwanted problems.
+                </p>
+            </p>
+            <p>
+                Mountains areas are always cold and in such weather, people don't feel thirsty but the amount of fluid
+                needed for your body should be fulfilled. Mosquitos can be very dangerous during your trek because
+                sometime you must stay in tents where you can be bitten by mosquitos. To prevent it you should simply
+                apply mosquito repellent cream in all uncovered part of your skin.
+            </p>
+
+            <p>
+                The most important thing you need to consider before continuing your trek is to give some information to
+                the people you encounter during the trek like the staffs in a lodge. You should tell them when you will
+                return back from there. There should be someone who knows that you are in trouble and needs to be
+                rescued. When you are trekking to high altitude you should bring necessary medicines for altitude
+                sickness.<strong>It doesn't matter how experienced trekker you are, there is always a possibility of
+                    getting sick.</strong>
+            </p>
 
         </div>
     </section>
