--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
 
 
 <!-- blog-2 -->
-    <section class="section Off-white">
+    <!-- <section class="section Off-white">
         <div class="center-container"> 
             <h2>DARK SERIES QUIZ</h2>
             <small>November, 2k20</small>
@@ -50,7 +50,7 @@
                 View Source Code
             </a>
         </div>
-    </section>
+    </section> -->
 
 <!-- blog-1 -->
     <section class="section light-dark ">
