--- a/project.html
+++ b/project.html
@@ -38,6 +38,23 @@
 
     <!-- PROJECTS -->
 
+<!-- project-3 -->
+    <section class="section light-dark ">
+        <div class="center-container">
+            <h2>LET'S SPEAK IN BANABA LANGUAGE</h2>
+            <small>November, 2k20</small>
+            <p>
+                A fun app, which you can use to speak in Banana language same as <strong>MINIONS</strong>. I made it with HTML, CSS & Vanilla Js.
+            </p>
+            <a class="links primary-links" href="https://speakinminion.netlify.app/" target="_blank">
+                Let's Speak in Banana
+            </a>
+            <a class="links secondary-links" href="https://github.com/ArnavRaaj/speakIn-banana-language" target="_blank">
+                View Source Code
+            </a>
+        </div>
+    </section>
+
 <!-- project-2 -->
     <section class="section Off-white">
         <div class="center-container"> 
