--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p>
                 I like to showcase my work and thus, you can see my projects hosted online.
             </p>
-            <a class="links primary-links" href="/project.html">See Projects</a>
+            <a class="links primary-links" href="/project.html">Browse Projects</a>
         </div>
     </section>
 
