--- a/project.html
+++ b/project.html
@@ -38,6 +38,23 @@
 
     <!-- PROJECTS -->
 
+    <!-- project-4 -->
+<section class="section Off-white">
+    <div class="center-container"> 
+        <h2>DARK SERIES QUIZ</h2>
+        <small>November, 2k20</small>
+        <p>
+            A CLI fun app built with <strong>Vanilla Js</strong>. Now, you can also learn GOT languages and enjoy them.
+        </p>
+        <a class="links primary-links" href="https://languageworld.netlify.app/" target="_blank">
+            Enjoy the translator
+        </a>
+        <a class="links secondary-links" href="https://github.com/ArnavRaaj/arnav-assignment-07" target="_blank">
+            View Source Code
+        </a>
+    </div>
+</section>    
+
 <!-- project-3 -->
     <section class="section light-dark ">
         <div class="center-container">
