--- a/project.html
+++ b/project.html
@@ -41,8 +41,8 @@
     <!-- project-4 -->
 <section class="section Off-white">
     <div class="center-container"> 
-        <h2>DARK SERIES QUIZ</h2>
-        <small>November, 2k20</small>
+        <h2>LANGUAGE WORLD</h2>
+        <small>December, 2k20</small>
         <p>
             A CLI fun app built with <strong>Vanilla Js</strong>. Now, you can also learn GOT languages and enjoy them.
         </p>
