--- a/project.html
+++ b/project.html
@@ -38,74 +38,118 @@
 
     <!-- PROJECTS -->
 
-    <!-- project-4 -->
-<section class="section Off-white">
-    <div class="center-container"> 
-        <h2>LANGUAGE WORLD</h2>
-        <small>December, 2k20</small>
-        <p>
-            A CLI fun app built with <strong>Vanilla Js</strong>. Now, you can also learn GOT languages and enjoy them.
-        </p>
-        <a class="links primary-links" href="https://languageworld.netlify.app/" target="_blank">
-            Enjoy the translator
-        </a>
-        <a class="links secondary-links" href="https://github.com/ArnavRaaj/arnav-assignment-07" target="_blank">
-            View Source Code
-        </a>
-    </div>
-</section>    
+    <!-- project-6 -->
+    <section class="section Off-white">
+        <div class="center-container">
+            <h2>TREK WORLD</h2>
+            <small>December, 2k20</small>
+            <p>
+                A React app, developed on <strong>CodeSandBox</strong>. The App suggests some top trekking trails of India of all seasons.
+            </p>
+            <a class="links primary-links" href="https://je8k4.csb.app/" target="_blank">
+                Chalein Trekking!
+            </a>
+            <a class="links secondary-links" href="https://github.com/ArnavRaaj/trek-guide-mark9" target="_blank">
+                View Source Code
+            </a>
+        </div>
+    </section>
 
-<!-- project-3 -->
+    <!-- project - 5 -->
+    <section class="section light-dark ">
+        <div class="center-container">
+            <h2>EMOJI INTERPRETER</h2>
+            <small>December, 2k20</small>
+            <p>
+                This app is an emoji interpreter, which tells the real meaning of any emoji(if in database). It is developed using ReactJs on CodeSandBox.
+            </p>
+            <a class="links primary-links" href="https://9uyqh.csb.app/" target="_blank">
+                Let's Interpret 
+            </a>
+            <a class="links secondary-links" href="https://github.com/ArnavRaaj/"
+                target="_blank">
+                View Source Code
+            </a>
+        </div>
+    </section>
+
+    <!-- project-4 -->
+    <section class="section Off-white">
+        <div class="center-container">
+            <h2>LANGUAGE WORLD</h2>
+            <small>December, 2k20</small>
+            <p>
+                A CLI fun app built with <strong>Vanilla Js</strong>. Now, you can also learn GOT languages and enjoy
+                them.
+            </p>
+            <a class="links primary-links" href="https://languageworld.netlify.app/" target="_blank">
+                Enjoy the translator
+            </a>
+            <a class="links secondary-links" href="https://github.com/ArnavRaaj/arnav-assignment-07" target="_blank">
+                View Source Code
+            </a>
+        </div>
+    </section>
+
+    <!-- project-3 -->
     <section class="section light-dark ">
         <div class="center-container">
             <h2>LET'S SPEAK IN BANABA LANGUAGE</h2>
             <small>November, 2k20</small>
             <p>
-                A fun app, which you can use to speak in Banana language same as <strong>MINIONS</strong>. I made it with HTML, CSS & Vanilla Js.
+                A fun app, which you can use to speak in Banana language same as <strong>MINIONS</strong>. I made it
+                with HTML, CSS & Vanilla Js.
             </p>
             <a class="links primary-links" href="https://speakinminion.netlify.app/" target="_blank">
                 Let's Speak in Banana
             </a>
-            <a class="links secondary-links" href="https://github.com/ArnavRaaj/speakIn-banana-language" target="_blank">
+            <a class="links secondary-links" href="https://github.com/ArnavRaaj/speakIn-banana-language"
+                target="_blank">
                 View Source Code
             </a>
         </div>
     </section>
 
-<!-- project-2 -->
+    <!-- project-2 -->
     <section class="section Off-white">
-        <div class="center-container"> 
+        <div class="center-container">
             <h2>DARK SERIES QUIZ</h2>
             <small>November, 2k20</small>
             <p>
-                A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and play a quiz to see how well know <strong>DARK.</strong>
+                A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and play a quiz to see
+                how well know <strong>DARK.</strong>
             </p>
-            <a class="links primary-links" href="https://repl.it/@ArnavRaj1/Dark-Series?embed=1&output=1#index.js" target="_blank">
+            <a class="links primary-links" href="https://repl.it/@ArnavRaj1/Dark-Series?embed=1&output=1#index.js"
+                target="_blank">
                 Play Quiz
             </a>
-            <a class="links secondary-links" href="https://github.com/ArnavRaaj/Dark-Series/blob/master/index.js" target="_blank">
+            <a class="links secondary-links" href="https://github.com/ArnavRaaj/Dark-Series/blob/master/index.js"
+                target="_blank">
                 View Source Code
             </a>
         </div>
     </section>
 
-<!-- project-1 -->
+    <!-- project-1 -->
     <section class="section light-dark ">
         <div class="center-container">
             <h2>HOW WELL DO YOU KNOW ME?</h2>
             <small>November, 2k20</small>
             <p>
-                A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and see how they know you.
+                A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and see how they know
+                you.
             </p>
-            <a class="links primary-links" href="https://repl.it/@ArnavRaj1/endgame?embed=1&output=1#index.js" target="_blank">
+            <a class="links primary-links" href="https://repl.it/@ArnavRaj1/endgame?embed=1&output=1#index.js"
+                target="_blank">
                 Live Project
             </a>
-            <a class="links secondary-links" href="https://github.com/ArnavRaaj/endgame/blob/master/index.js" target="_blank">
+            <a class="links secondary-links" href="https://github.com/ArnavRaaj/endgame/blob/master/index.js"
+                target="_blank">
                 View Source Code
             </a>
         </div>
     </section>
-    
+
 
     <!-- FOOTER -->
     <footer class="footer">
@@ -115,17 +159,20 @@
                 <a href="https://github.com/ArnavRaaj" class="secondary-links links" target="_blank">GitHub</a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links"
+                    target="_blank">LinkedIn</a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.instagram.com/arnav.raaze/" class="secondary-links links" target="_blank">Instagram</a>
+                <a href="https://www.instagram.com/arnav.raaze/" class="secondary-links links"
+                    target="_blank">Instagram</a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.facebook.com/arnav.raj.796774/" class="secondary-links links" target="_blank">facebook</a>
+                <a href="https://www.facebook.com/arnav.raj.796774/" class="secondary-links links"
+                    target="_blank">facebook</a>
             </li>
             <li class="list-item-inline ">
                 <a href="https://twitter.com/ArnavRa74778792" class="secondary-links links" target="_blank">Twitter</a>
-            </li>            
+            </li>
         </ul>
     </footer>
 </body>
